--- a/index.html
+++ b/index.html
@@ -2,9 +2,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>
-		Useless box
-	</title>
 
 	<meta name="format-detection" content="telephone=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -13,6 +10,7 @@
 	
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" media="all">
 	<link rel="stylesheet" type="text/css" href="css/style.css" media="all">
+	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:700' rel='stylesheet' type='text/css'>
 
 	<script src="js/jquery.js"></script>
 	<script src="js/script.js"></script>
@@ -22,11 +20,11 @@
 
 <body class="clearfix">
 
+
 <!-- Title -->
 <div class="sitetitle">
-	<h1>
-		USELESSBOX
-	</h1>
+	<span class="useless">USELESS</span>
+	<span class="box">BOX</span>
 </div>
 
 <!-- Visitors and click count -->
