--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 
-<body class="clearfix">
+<body class="cf">
 
 <!-- Title -->
 <div class="sitetitle">
-	<h1>
-		USELESSBOX
-	</h1>
+	<span class="title-useless">
+		USELESS
+	</span>
+	<span class="title-box">
+		BOX
+	</span>
 </div>
 
 <!-- Visitors and click count -->
